# Mulitmedia_Systems_Uni_Project

./: .gitignore  CMakeLists.txt  Funkcje.cpp  Funkcje.h  Kompresja.cpp  Kompresja.h  MedianCut.cpp  MedianCut.h  Modele.cpp  Modele.h  Paleta.cpp  Paleta.h  Pliki.cpp  Pliki.h  Projekt.cbp  Projekt.cpp  Projekt.depend  Projekt.layout  README.md  Zmienne.cpp  Zmienne.h
